Simplify stream to list collection